[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "borevitz-lab"
version = "0.1.0"
description = "Shared core for Borevitz Lab pipelines: Query and Config primitives"
readme = "README.md"
authors = [
  { name = "Borevitz Lab, Australian National University" },
  { name = "Yasar Adeel Ansari", email = "u6737670@anu.edu.au" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
  "remote-sensing",
  "geospatial",
  "time-series",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "attrs",
  "tabulate",
  "typing_extensions",
]

[project.optional-dependencies]
# Query.build_from_paddocks reads paddock geometry files.
paddocks = [
  "geopandas",
]

[tool.setuptools.packages.find]
include = ["borevitz_lab", "borevitz_lab.*"]
